--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World!
+[  
+   "item name",
+   "item name",
+   "item name",
+   "total",
+   "item price",
+   "item price",
+   "item price",
+   "total price",
+   "vendor name",
+   "vendor address",
+   "vendor address",
+   "other",
+   "vendor address"
+]
